# erda

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  ERDA_BUILD_SPEC.md  README.md  pyproject.toml
.claude/: launch.json
.claude/skills/erda-agent-tools/: SKILL.md
.claude/skills/erda-data-contracts/: SKILL.md
.claude/skills/erda-design-system/: SKILL.md
.github/workflows/: ci.yml  nightly_refresh.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/erda_api/: __init__.py  data.py  main.py  routes_map.py  routes_memo.py  routes_meta.py  routes_panels.py
apps/api/tests/: test_health.py  test_map_routes.py  test_meta_routes.py
apps/web/: README.md  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/e2e/: map.spec.ts  pages.spec.ts  terminal.spec.ts
apps/web/public/: land-110m.json
apps/web/scripts/: screenshot.mjs
data/curated/: README.md  cost_benchmarks.README.md  cost_benchmarks.csv  crust_type_map.csv  eia_series.yaml  financing_exclusions.README.md  financing_exclusions.csv  opec_targets.README.md  opec_targets.csv  outcome_map.README.md  outcome_map.csv  source_registry.yaml
data/curated/fiscal/: NAM.yaml  NOR.yaml  README.md  USA.yaml
data/curated/outcome_map.d/: boem_bsee.csv  nlog.csv  (+3 more)
data/memos/: GOM-MARGINAL-DEMO.json  GOM-MARGINAL-DEMO.md  GOM-WR-DEMO.json  GOM-WR-DEMO.md  NAM-ORANGE-DEMO.json  NAM-ORANGE-DEMO.md  NAM-SPECULATIVE-DEMO.json  NAM-SPECULATIVE-DEMO.md  NOR-VORING-DEMO.json  NOR-VORING-DEMO.md
data/models/: gbm_full.txt
docs/: architecture.html  social.html
notebooks/: p2_labels_eda.ipynb
ops/: README.md  build_labels.py  build_stack.py  demo_freeze.py  make_eda_notebook.py  make_memo.py  refresh.py  showcase_blocks.json  train_gbm.py
tests/fixtures/: golden_block.yaml
(+24 files in other folders)
