[project]
name = "erda-api"
version = "0.1.0"
description = "ERDA API: REST + tiles + SSE memo stream (FastAPI)."
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["erda_api"]
